Consistent use of URL types